--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson0</title>
+    <title>JavaScript is fun!</title>
 </head>
 <body>
     <h1>Hi!</h1>
     <p>How are you?</p>
     <p>All rights!</p>
+    <script src="js/lesson1.js"></script>
 </body>
 </html>
