--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Hi!</h1>
     <p>How are you?</p>
     <p>All rights!</p>
-    <script src="js/lesson1.js"></script>
+    <script src="/home/roman/google-drive/projects/homework/js/"></script>
 </body>
 </html>
