--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript is fun!</title>
+    <title>JavaScript is fun</title>
 </head>
 <body>
-    <h1>Hi!</h1>
-    <p>How are you?</p>
-    <p>All rights!</p>
-    <script src="/home/roman/google-drive/projects/homework/js/"></script>
+    <h1>Start!</h1>
+    <p>Go-go-go!</p>
+<script src="./js/lesson-1.js" type="module"></script>
 </body>
 </html>
