--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Start!</h1>
     <p>Go-go-go!</p>
-<script src="./js/lesson-1.js" type="module"></script>
+<!-- <script src="./js/cycle_while.js" type="module"></script> -->
+<script src="./js/cycle_do_while.js" type="module"></script>
 </body>
 </html>                     
